[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Games/move_ball.gd" type="Script" id=1]
[ext_resource path="res://Textures/grass.png" type="Texture" id=2]
[ext_resource path="res://Textures/grass_normal.png" type="Texture" id=3]
[ext_resource path="res://Textures/kitchen_wall_diffuse.png" type="Texture" id=4]
[ext_resource path="res://Textures/kitchen_wall_occlusion.png" type="Texture" id=5]
[ext_resource path="res://Textures/kitchen_wall_normal.png" type="Texture" id=6]
[ext_resource path="res://Scripts/translation_teleoperator.gd" type="Script" id=7]
[ext_resource path="res://Meshes/soccerball_with_easy_rig_v2.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Meshes/force_arrow.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Scripts/vector_display.gd" type="Script" id=10]
[ext_resource path="res://Textures/wood.jpg" type="Texture" id=11]
[ext_resource path="res://Textures/wood_height.jpg" type="Texture" id=12]
[ext_resource path="res://Textures/wood_normal.png" type="Texture" id=13]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=14]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 10, 10 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 4, 0.2, 4 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 6 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 5 )
ao_on_uv2 = false
ao_texture_channel = 0
uv1_scale = Vector3( 6, 4, 1 )

[sub_resource type="SphereShape" id=5]
radius = 0.201232

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="GDScript" id=8]
script/source = "extends MeshInstance

func _physics_process( delta ):
	rotation += ( get_parent().linear_velocity.rotated( Vector3.UP, PI / 2 ) / $\"../Collider\".shape.radius ) * delta
"

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0.960784, 0, 1 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0.972549, 1, 1 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.04, 0.3, 2 )

[sub_resource type="CubeMesh" id=12]
size = Vector3( 1, 0.05, 4 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 1, 0.870588, 0.560784, 1 )
albedo_texture = ExtResource( 11 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 13 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 12 )
ao_on_uv2 = false
ao_texture_channel = 0
uv1_scale = Vector3( 1, 5, 1 )
uv1_offset = Vector3( 0, -0.015, 0 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
albedo_color = Color( 0.0705882, 1, 0, 0.313726 )

[sub_resource type="SphereMesh" id=15]
material = SubResource( 14 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Platform" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0202379, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Ball" type="RigidBody" parent="Ground/Platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.301, 0 )
gravity_scale = 0.0
continuous_cd = true
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 7 )

[node name="Collider" type="CollisionShape" parent="Ground/Platform/Ball"]
shape = SubResource( 5 )

[node name="Mesh" type="MeshInstance" parent="Ground/Platform/Ball"]
transform = Transform( 0.265, 0, 0, 0, 0.265, 0, 0, 0, 0.265, 0, 0, 0 )
mesh = ExtResource( 8 )
material/0 = SubResource( 6 )
material/1 = SubResource( 7 )
script = SubResource( 8 )

[node name="InputArrow" type="MeshInstance" parent="Ground/Platform/Ball"]
transform = Transform( 0.5, 0, 0, 0, 0.1, 0, 0, 0, -0.5, 0, 0, 0 )
material_override = SubResource( 9 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = null
script = ExtResource( 10 )

[node name="FeedbackArrow" type="MeshInstance" parent="Ground/Platform/Ball"]
transform = Transform( 0.5, 0, 0, 0, 0.1, 0, 0, 0, -0.5, 0, 0, 0 )
material_override = SubResource( 10 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 10 )
script = ExtResource( 10 )

[node name="Walls" type="StaticBody" parent="Ground/Platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )

[node name="Shape1" type="CollisionShape" parent="Ground/Platform/Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )
shape = SubResource( 11 )

[node name="Shape2" type="CollisionShape" parent="Ground/Platform/Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
shape = SubResource( 11 )

[node name="Shape3" type="CollisionShape" parent="Ground/Platform/Walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 2 )
shape = SubResource( 11 )

[node name="Shape4" type="CollisionShape" parent="Ground/Platform/Walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -2 )
shape = SubResource( 11 )

[node name="Mesh1" type="MeshInstance" parent="Ground/Platform/Walls"]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, -0.184, 2 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="Mesh2" type="MeshInstance" parent="Ground/Platform/Walls"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2, -0.184, 0 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="Mesh3" type="MeshInstance" parent="Ground/Platform/Walls"]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, -0.184, -2 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="Mesh4" type="MeshInstance" parent="Ground/Platform/Walls"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2, -0.184, 0 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="Target" type="Area" parent="Ground/Platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
visible = false

[node name="Shape" type="CollisionShape" parent="Ground/Platform/Target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.92, 0, 0 )
shape = SubResource( 11 )

[node name="Mesh" type="MeshInstance" parent="Ground/Platform/Target"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = null

[node name="Light" type="SpotLight" parent="."]
transform = Transform( 0.918284, -0.174718, 0.355287, -0.395923, -0.405231, 0.824034, 0, -0.897364, -0.441292, 3.57096, 7.75351, -3.93894 )
shadow_enabled = true
spot_range = 23.7866
spot_angle = 29.4448

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.5, 0 )
fov = 50.0

[node name="GUI" parent="." instance=ExtResource( 14 )]
[connection signal="game_timeout" from="GUI" to="." method="_on_GUI_game_timeout"]
[connection signal="game_toggle" from="GUI" to="." method="_on_GUI_game_toggle"]
